--- a/readXls.csproj
+++ b/readXls.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="ExcelDataReader" Version="3.6.0" />
+    <PackageReference Include="MiniExcel" Version="1.31.2" />
   </ItemGroup>
 
 </Project>
